unpackaged/main/default/objects/HR_Jobs__c/HR_Jobs__c.object-meta.xml
<CustomObject>
    <description>Job Position to be filled</description>
    <label>HR Job</label>
    <nameField>
        <label>Job Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>HR Jobs</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>