unpackaged/main/default/objects/HR_Jobs__c/fields/Job_Filled__c.field-meta.xml
<CustomField>
    <fullName>Job_Filled__c</fullName>
    <label>Job Filled</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>No</fullName>
                <default>true</default>
                <label>No</label>
            </value>
            <value>
                <fullName>Yes</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>