unpackaged/main/default/objects/HR_Jobs__c/fields/Job_Name__c.field-meta.xml
<CustomField>
    <fullName>Job_Name__c</fullName>
    <label>Job Name</label>
    <length>80</length>
    <type>Text</type>
</CustomField>