unpackaged/main/default/objects/HR_Jobs__c/fields/Job_Number__c.field-meta.xml
<CustomField>
    <fullName>Job_Number__c</fullName>
    <displayFormat>JOB{00000}</displayFormat>
    <label>Job Number</label>
    <type>AutoNumber</type>
</CustomField>