unpackaged/main/default/objects/HR_Jobs__c/fields/Job_Requirements__c.field-meta.xml
<CustomField>
    <fullName>Job_Requirements__c</fullName>
    <label>Job Requirements</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>