unpackaged/main/default/objects/HR_Jobs__c/fields/Job_Status__c.field-meta.xml
<CustomField>
    <fullName>Job_Status__c</fullName>
    <label>Job Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>01-Open</fullName>
                <default>true</default>
                <label>01-Open</label>
            </value>
            <value>
                <fullName>02-Sourcing</fullName>
            </value>
            <value>
                <fullName>03-Interviewing</fullName>
            </value>
            <value>
                <fullName>04-Offer Negotiation</fullName>
            </value>
            <value>
                <fullName>05-Routing Offer</fullName>
            </value>
            <value>
                <fullName>06-Offer Sent</fullName>
            </value>
            <value>
                <fullName>07-Offer Accepted</fullName>
            </value>
            <value>
                <fullName>08-Filled</fullName>
            </value>
            <value>
                <fullName>09-On Hold</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>