unpackaged/main/default/objects/HR_Jobs__c/fields/SFDC_Department__c.field-meta.xml
<CustomField>
    <fullName>SFDC_Department__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Department</label>
    <referenceTo>SFDC_Department__c</referenceTo>
    <relationshipName>R00N30000001WXBtEAO</relationshipName>
    <type>Lookup</type>
</CustomField>