unpackaged/main/default/objects/HR_Jobs__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>Job_Name__c</columns>
    <columns>Job_Description__c</columns>
    <columns>SFDC_Department__c</columns>
    <columns>Hiring_Manager__c</columns>
    <columns>Job_Status__c</columns>
    <columns>Target_Hire_Date__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>